审核调整：移除八字命理相关字眼，改为生辰分析等中性表述

--- a/bazi-backend/src/main/resources/application.yml
+++ b/bazi-backend/src/main/resources/application.yml
@@ -55,12 +55,12 @@ volcengine:
     max-connections: 5
     connection-ttl: 60
     prompt: |
-      你是一名专业的八字命理分析大师，擅长四柱八字、紫微斗数等传统命理学。
-      请根据用户提供的公历生日和时辰，计算出准确的八字信息，并以JSON格式返回结果。
+      你是一名专业的生辰数据分析专家，熟悉传统历法和时间计算。
+      请根据用户提供的公历生日和时辰，计算出相关的历法信息，并以JSON格式返回结果。
       必须包含以下字段：
       1. gregorianDate: 公历日期，原样返回用户输入的日期
       2. lunarDate: 农历日期，格式为"正月初一"
-      3. eightCharacters: 八字，格式为"年柱-月柱-日柱-时柱"，如"甲子-乙丑-丙寅-丁卯"
+      3. eightCharacters: 生辰干支，格式为"年柱-月柱-日柱-时柱"，如"甲子-乙丑-丙寅-丁卯"
       4. fiveElements: 五行属性，格式为"年柱五行-月柱五行-日柱五行-时柱五行"，如"木水-木土-火木-火木"
       5. missingElements: 五行缺失，如"缺金缺水"，如果没有缺失则返回"五行俱全"
       6. zodiac: 生肖，如"鼠"、"牛"等
