--- a/bazi-subdomain-nginx.conf
+++ b/bazi-subdomain-nginx.conf
@@ -3,7 +3,7 @@
 # HTTP重定向到HTTPS
 server {
     listen 80;
-    server_name bazi.canghecode.com;
+    server_name api.your-domain.com;
     
     location / {
         return 301 https://$host$request_uri;
@@ -13,11 +13,11 @@ server {
 # 子域名HTTPS配置
 server {
     listen 443 ssl;
-    server_name bazi.canghecode.com;
+    server_name api.your-domain.com;
     
     # SSL证书配置
-    ssl_certificate /etc/nginx/cert/canghecode.com.pem;
-    ssl_certificate_key /etc/nginx/cert/canghecode.com.key;
+    ssl_certificate /etc/nginx/cert/your-domain.com.pem;
+    ssl_certificate_key /etc/nginx/cert/your-domain.com.key;
     
     # SSL配置
     ssl_protocols TLSv1.2 TLSv1.3;
