安全增强：移除微信小程序 appid 信息并添加配置说明

--- a/bazi-frontend/project.config.json
+++ b/bazi-frontend/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "wx3d00dfca673eedd2",
+  "appid": "YOUR_WECHAT_APPID",
   "compileType": "miniprogram",
   "libVersion": "3.7.11",
   "packOptions": {
